# movie-ticket-booking-system-10th-grade-VSN6

./: CMakeLists.txt  README.md  main.cpp
include/: cinema.h  hall.h  movie.h  payment.h  seat.h  show.h  user.h
login/: loginpage.cpp
src/: cinema.cpp  hall.cpp  movie.cpp  payment.cpp  seat.cpp  show.cpp  user.cpp
txtfiles/: cinemas.txt  users.txt
